--- a/source/scss/3-base/_content.scss
+++ b/source/scss/3-base/_content.scss
@@ -389,7 +389,7 @@
 				float:none;
 				width:33.33%;
 				margin:0;
-				padding:3%;
+				padding:40px 3%;
 			}
 	
 			.col2{
