--- a/source/scss/ie.scss
+++ b/source/scss/ie.scss
@@ -17,6 +17,15 @@
 }
 
 
+
+.come-in {
+    transform: translateY(0)!important;
+  }
+  
+
+  
+
+
 //
 //  Large devices (large desktops, 970px and up)
 //
